# src/modules/superadmin/models/superadmin.model.ts
@@ -1,0 +1,9 @@
+export interface SuperAdmin {
+  id: string;
+  email: string;
+  password: string;
+  name: string;
+  role: string;
+  createdAt: Date;
+  updatedAt: Date;
+}
